feat: OCR 수행 중 텍스트 추출 실패시 로깅 강화